--- a/.gitignore
+++ b/.gitignore
@@ -209,6 +209,6 @@ __marimo__/
 
 
 data
-graphtoken/output/*
-graphtoken/wandb/*
-graphtoken/process/*
+graphtoken/output/
+graphtoken/wandb/
+graphtoken/process/
